self-storage timeline spacing fixed

--- a/static/css/self-storage.css
+++ b/static/css/self-storage.css
@@ -652,7 +652,7 @@ body {
   border-radius: 50%;
   transform: translate(-50%, 0);
   top: 11%;
-  z-index: 2;
+  z-index: 4;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -664,7 +664,7 @@ body {
   height: 18px;
   background-color: #ffffff;
   border-radius: 50%;
-  z-index: 3;
+  z-index: 4;
 }
 
 .step {
@@ -681,7 +681,7 @@ body {
 
 .step-image {
   width: 400px;
-  height: 666px;
+  height: 400px;
   object-fit: contain;
 }
 
@@ -754,17 +754,15 @@ body {
 .scroll-dots {
   grid-row: 1/2;
   grid-column: 1/2;
-}
-
-.step-content-container {
-  margin-top: 15%;
+  z-index: 4;
 }
 
 /* Add smooth transitions for all elements */
 .step {
   display: flex;
   flex-direction: row;
-  margin-bottom: 80px;
+  margin-bottom: 200px;
+  align-items: center;
   width: 100%;
   opacity: 0;
   transform: translateY(20px);
